Add report component and rating component

--- a/www/index.html
+++ b/www/index.html
@@ -13,5 +13,5 @@
 <link rel="stylesheet" href="styles.a295321d2f095c680059.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.5bc68c0dd8cf137fbe82.js" type="module"></script><script src="polyfills-es2015.63d8a9888481460f2c05.js" type="module"></script><script src="runtime-es5.ee0aae13fb762b150814.js" nomodule defer></script><script src="polyfills-es5.4eb2e0930c1d8e2216b9.js" nomodule defer></script><script src="main-es2015.487ae6a88c6ed5e77367.js" type="module"></script><script src="main-es5.fed2eea7734f654e39f2.js" nomodule defer></script></body>
+<script src="polyfills-es5.7fa2b2bfa1e2a7a7092b.js" nomodule defer></script><script src="polyfills-es2015.c09dbc7c3f7b5a9558cd.js" type="module"></script><script src="runtime-es2015.24b02acc1f369d9b9f37.js" type="module"></script><script src="main-es2015.beaf76c7836c2b6acee9.js" type="module"></script><script src="runtime-es5.24b02acc1f369d9b9f37.js" nomodule defer></script><script src="main-es5.beaf76c7836c2b6acee9.js" nomodule defer></script></body>
 </html>
