Datepicker in report page

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>E-CLASS</title>
-  <base href="./">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,5 +13,5 @@
 <link rel="stylesheet" href="styles.6b6c0fd9acfe45f21220.css"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-es5.7fa2b2bfa1e2a7a7092b.js" nomodule defer></script><script src="polyfills-es2015.c09dbc7c3f7b5a9558cd.js" type="module"></script><script src="runtime-es2015.24b02acc1f369d9b9f37.js" type="module"></script><script src="main-es2015.ef990a0394d8711c24e8.js" type="module"></script><script src="runtime-es5.24b02acc1f369d9b9f37.js" nomodule defer></script><script src="main-es5.ef990a0394d8711c24e8.js" nomodule defer></script></body>
+<script src="polyfills-es5.7fa2b2bfa1e2a7a7092b.js" nomodule defer></script><script src="polyfills-es2015.c09dbc7c3f7b5a9558cd.js" type="module"></script><script src="runtime-es2015.24b02acc1f369d9b9f37.js" type="module"></script><script src="main-es2015.7278f5ddb87d56549419.js" type="module"></script><script src="runtime-es5.24b02acc1f369d9b9f37.js" nomodule defer></script><script src="main-es5.7278f5ddb87d56549419.js" nomodule defer></script></body>
 </html>
